--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -44,12 +44,12 @@
     "2faCode": "TOTP Code"
   },
   "setup": {
-    "welcome": "Welcome to your first setup of wg-easy",
-    "welcomeDesc": "You have found the easiest way to install and manage WireGuard on any Linux host",
+    "welcome": "Welcome to your first setup of Edge Tunnel",
+    "welcomeDesc": "You have found the easiest way to install and manage your private VPN on any Linux host",
     "existingSetup": "Do you have an existing setup?",
     "createAdminDesc": "Please first enter an admin username and a strong secure password. This information will be used to log in to your administration panel.",
     "setupConfigDesc": "Please enter the host and port information. This will be used for the client configuration when setting up WireGuard on their devices.",
-    "setupMigrationDesc": "Please provide the backup file if you want to migrate your data from your previous wg-easy version to your new setup.",
+    "setupMigrationDesc": "Please provide the backup file if you want to migrate your data from your previous version to your new setup.",
     "upload": "Upload",
     "migration": "Restore the backup:",
     "createAccount": "Create Account",
@@ -169,11 +169,11 @@
       "cidrSuccess": "Changed CIDR",
       "device": "Device",
       "deviceDesc": "Ethernet device the wireguard traffic should be forwarded through",
-      "mtuDesc": "MTU WireGuard will use",
-      "portDesc": "UDP Port WireGuard will listen on (you probably want to change Config Port too)",
+      "mtuDesc": "MTU the tunnel will use",
+      "portDesc": "UDP Port the tunnel will listen on (you probably want to change Config Port too)",
       "changeCidr": "Change CIDR",
       "restart": "Restart Interface",
-      "restartDesc": "Restart the WireGuard interface",
+      "restartDesc": "Restart the tunnel interface",
       "restartWarn": "Are you sure to restart the interface? This will disconnect all clients.",
       "restartSuccess": "Interface restarted"
     },
